qubole-azure-terraform-deployment/qubole-deployment/modules/network_infrastucture/azure_virtual_network_qubole_dedicated_vnet.tf
resource "azurerm_virtual_network" "qubole_dedicated_vnet" {
  name          = "qubole_dedicated_vnet_${var.deployment_suffix}"
  address_space = ["10.0.0.0/16"]
  location      = "East US"

  subnet {
    address_prefix = "10.0.1.0/24"
    name = "qubole_vpc_default_subnet_${var.deployment_suffix}"
  }

  resource_group_name = var.qubole_resource_group_name
}

output "qubole_dedicated_vnet" {
  value = azurerm_virtual_network.qubole_dedicated_vnet.name
}
